third commit : adding a form for any question for profs when you click on there name

--- a/TP1/emploie.html
+++ b/TP1/emploie.html
@@ -39,11 +39,19 @@
             <th style="color: #E36A0D;">
                 <a href="adii.html" style="color: #E36A0D; text-decoration: none;">ADMINISTRATION DE L'INFRASTRUCTURE INFORMATIQUE</a>
             </th>
-            <th style="color:#0070C0">info 2 with Pr. Tissir</th>
+            <th style="color:#0070C0">
+                <p>info 2</p>
+                <a href="formulaire.html" style="color:#0070C0;text-decoration: none;">
+                   <p>Pr. Tissir</p> 
+                </a>
+            </th>
             <th style="color: #E36A0D;">
                 <a href="adii.html" style="color: #E36A0D; text-decoration: none;">ADMINISTRATION DE L'INFRASTRUCTURE INFORMATIQUE</a>
             </th>
-            <th style="color:#0070C0">info 2 with Pr. Tissir</th>
+            <th style="color:#0070C0"><p>info 2</p>
+                <a href="formulaire.html" style="color:#0070C0;text-decoration: none;">
+                   <p>Pr. Tissir</p> 
+                </a></th>
             <th style="background-color: white;"></th>
             <th style="color: #E36A0D;">
                 <a href="art_digital.html" style="color: #E36A0D; text-decoration: none;">ART DIGITAL</a>
@@ -77,11 +85,17 @@
             <th style="color: #E36A0D;">
                 <a href="java.html" style="color: #E36A0D; text-decoration: none;">JAVA</a>
             </th>
-            <th style="color:#0070C0">C2 with Pr. Baghdadi S.</th>
+            <th style="color:#0070C0"><p>C2</p>
+                <a href="formulaire.html" style="color:#0070C0;text-decoration: none;">
+                <p>Baghdadi S.</p></th>
+                </a>
             <th style="color: #E36A0D;">
                 <a href="java.html" style="color: #E36A0D; text-decoration: none;">JAVA</a>
             </th>
-            <th style="color:#0070C0">C2 with Pr. Baghdadi S.</th>
+            <th style="color:#0070C0"><p>C2</p>
+                <a href="formulaire.html" style="color:#0070C0;text-decoration: none;">
+                <p>Baghdadi S.</p></th>
+                </a></th>
             <th style="background-color: white;"></th>
             <th style="color: #E36A0D;background-color: white;">Travaux Pratiques</th>
             <th style="background-color: white;">      </th>
@@ -93,17 +107,26 @@
             <th style="color: #E36A0D;">
                 <a href="unix.html" style="color: #E36A0D; text-decoration: none;">SYSTEMES D'EXPLOITATION & UNIX</a>
             </th>
-            <th style="color:#0070C0">C2 with Pr. Omari</th>
+            <th style="color:#0070C0"><p>C2</p>
+                <a href="formulaire.html" style="color:#0070C0;text-decoration: none;">
+                <p>Pr. Omari</p></th>
+                </a>
             <th style="color: #E36A0D;">
                 <a href="unix.html" style="color: #E36A0D; text-decoration: none;">SYSTEMES D'EXPLOITATION & UNIX</a>
             </th>
-            <th style="color:#0070C0">C2 with Pr. Omari</th>
+            <th style="color:#0070C0"><p>C2</p>
+                <a href="formulaire.html" style="color:#0070C0;text-decoration: none;">
+                <p>Pr. Omari</p></th>
+                </a></th>
             <th style="background-color: white;"></th>
             <th style="color: #E36A0D;">
                 <a href="anglais.html" style="color: #E36A0D; text-decoration: none;">ANGLAIS</a>
                 
             </th>
-            <th style="color:#0070C0">F24 with Pr. Boukhlet</th>
+            <th style="color:#0070C0"><p>F24</p>
+                <a href="formulaire.html" style="color:#0070C0;text-decoration: none;">
+                <p>Pr. Boukhlet</p></th>
+                </a>
             <th style="color: #E36A0D;background-color: white;">Travaux Pratiques</th>
             <th style="background-color: white;">       </th>
         </tr>
@@ -112,11 +135,17 @@
             <th style="color: #E36A0D;">
                 <a href="pw.html" style="color: #E36A0D; text-decoration: none;">PROGRAMMATION WEB</a>
             </th>
-            <th style="color:#0070C0">C2 with Pr. Omari</th>
+            <th style="color:#0070C0"><p>C2</p>
+                <a href="formulaire.html" style="color:#0070C0;text-decoration: none;">
+                <p>Pr. Omari</p></th>
+                </a></th>
             <th style="color: #E36A0D;">
                 <a href="pw.html" style="color: #E36A0D; text-decoration: none;">PROGRAMMATION WEB</a>
             </th>
-            <th style="color:#0070C0">C2 with Pr. Omari</th>
+            <th style="color:#0070C0"><p>C2</p>
+                <a href="formulaire.html" style="color:#0070C0;text-decoration: none;">
+                <p>Pr. Omari</p></th>
+                </a></th>
             <th style="background-color: white;color: red;writing-mode: vertical-rl;transform: scale(1, 1);">14:30</th>
             <th style="color: #E36A0D;background-color: white;">Travaux Pratiques</th>
             <th style="background-color: white;">      </th>
